@@ -1,3 +1,9 @@
+2015-11-23  Natalia Portillo  <claunia@claunia.com>
+
+	* DiskType.cs:
+	* DiscImageChef.CommonTypes.csproj:
+	  Moved DiskType to commons.
+
 2015-10-19  Natalia Portillo  <claunia@claunia.com>
 
 	* DiscImageChef.CommonTypes.csproj:
